// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item and ItemList classes Item fromStoredData should return expected Item instance after loading from stored data 1`] = `
TestItem {
  "isUnlocked": true,
}
`;

exports[`Item and ItemList classes Item should create the expected Item class 1`] = `
TestItem {
  "isUnlocked": false,
}
`;

exports[`Item and ItemList classes Item toStorableData should return expected storable data 1`] = `
Object {
  "isUnlocked": false,
}
`;

exports[`Item and ItemList classes Item toStorableData should return expected storable data when unlocked 1`] = `
Object {
  "isUnlocked": true,
}
`;

exports[`Item and ItemList classes ItemList fromStoredData should return expected Item instance after loading from stored data 1`] = `
TestItemList {
  "items": Array [
    TestItem {
      "isUnlocked": true,
    },
    TestItem {
      "isUnlocked": false,
    },
  ],
}
`;

exports[`Item and ItemList classes ItemList should create expected ItemList class instance 1`] = `
TestItemList {
  "items": Array [],
}
`;

exports[`Item and ItemList classes ItemList toStorableData should return expected storable data 1`] = `
Object {
  "items": Array [
    Object {
      "isUnlocked": false,
    },
    Object {
      "isUnlocked": false,
    },
  ],
}
`;

exports[`Item and ItemList classes ItemList toStorableData should return expected storable data when unlocked 1`] = `
Object {
  "items": Array [
    Object {
      "isUnlocked": true,
    },
    Object {
      "isUnlocked": false,
    },
  ],
}
`;

exports[`Level should create expected Level class instance 1`] = `
Level {
  "_value": 1,
  "max": 3,
  "min": 1,
  "onChange": undefined,
}
`;

exports[`Resource should create expected Resource class instance 1`] = `
Resource {
  "costs": Array [
    1,
    1,
    1,
    1,
    1,
  ],
  "level": Level {
    "_value": 0,
    "max": 5,
    "min": 0,
    "onChange": undefined,
  },
  "name": undefined,
  "total": 5,
}
`;

exports[`Resource should create expected Resource class instance with name 1`] = `
Resource {
  "costs": Array [
    1,
    1,
    1,
    1,
    1,
  ],
  "level": Level {
    "_value": 0,
    "max": 5,
    "min": 0,
    "onChange": undefined,
  },
  "name": "blood",
  "total": 5,
}
`;
